--- a/src/asistente/components/asistente.css
+++ b/src/asistente/components/asistente.css
@@ -1,10 +1,8 @@
-.container {
+.card {
     margin-right: 15px;
     display: inline-block;
     border: 0.5px;
-    border-style: solid;
-    cursor: pointer;
-    width: 260px;
+    border-style: groove;
     vertical-align: top;
     padding: 20px;
 }
@@ -16,5 +14,6 @@
 }
 
 .header {
-    font-size: 120%;
+    font-weight: bold;
+    font-size: 20px;
 }
